--- a/automatic/zecwallet-lite/zecwallet-lite.nuspec
+++ b/automatic/zecwallet-lite/zecwallet-lite.nuspec
@@ -13,13 +13,14 @@
     <licenseUrl>https://github.com/adityapk00/zecwallet-lite/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/adityapk00/zecwallet-lite</projectSourceUrl>
+    <docsUrl>https://github.com/adityapk00/zecwallet-lite</docsUrl>
     <tags>zecwallet-lite zcash wallet</tags>
     <summary>Zecwallet-Lite is z-Addr first, Sapling compatible lightwallet client for Zcash.</summary>
     <description>Zecwallet-Lite is z-Addr first, Sapling compatible lightwallet client for Zcash. It has full support for all Zcash features:
-    * Send + Receive fully shielded transactions
-    * Supports transparent addresses and transactions
-    * Full support for incoming and outgoing memos
-    * Fully encrypt your private keys, using viewkeys to sync the blockchain
+* Send + Receive fully shielded transactions
+* Supports transparent addresses and transactions
+* Full support for incoming and outgoing memos
+* Fully encrypt your private keys, using viewkeys to sync the blockchain
     </description>
     <releaseNotes>https://github.com/adityapk00/zecwallet-lite/releases</releaseNotes>
   </metadata>
