--- a/automatic/parsec/parsec.nuspec
+++ b/automatic/parsec/parsec.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>parsec</id>
-    <version>150.35</version>
+    <version>20200519.16</version>
     <packageSourceUrl>https://github.com/fabricemrchl/chocolatey-packages</packageSourceUrl>
     <owners>Le_Bleu</owners>
     <title>Parsec</title>
