change icon link to use https://raw.githack.com/

--- a/automatic/joal-desktop/joal-desktop.nuspec
+++ b/automatic/joal-desktop/joal-desktop.nuspec
@@ -8,7 +8,7 @@
     <title>Joal Desktop</title>
     <authors>Anthony Raymond</authors>
     <projectUrl>https://github.com/anthonyraymond/joal-desktop</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/anthonyraymond/joal-desktop/v2.0.1/resources/icon.png</iconUrl>
+    <iconUrl>https://rawcdn.githack.com/anthonyraymond/joal-desktop/v2.0.3/resources/icon.png</iconUrl>
     <licenseUrl>https://github.com/anthonyraymond/joal-desktop/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>joal-desktop joal torrent</tags>
